# rust-wgpu-engine

./: .gitignore  Cargo.toml  main.py
src/: copy.rs  lib.rs  main.rs
src/shaders/: compute.wgsl  shader.wgsl
templates/: index.html
